# xengui

./: .gitignore  Cargo.toml  README.md  test.rsx  vercel.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci_check.yml  ci_check.yml.bak
crates/xen-animation/: Cargo.toml  LICENSE  README.md
crates/xen-animation/src/: easing.rs  lib.rs  manager.rs  transition.rs  transition_property.rs  value.rs
crates/xen-clipboard/: Cargo.toml  README.md
crates/xen-clipboard/src/: clipboard.rs  error.rs  lib.rs  linux.rs  wasm.rs  windows.rs
crates/xen-router/: Cargo.toml
crates/xen-router/src/: lib.rs  link.rs  route_match.rs  router.rs  state.rs
crates/xen-svg/: Cargo.toml  README.md
crates/xen-svg/src/: color.rs  document.rs  element.rs  lib.rs  parser.rs  tessellate.rs  transform.rs
crates/xencommit/: Cargo.toml
crates/xencommit/src/: main.rs
crates/xenframe/: Cargo.toml  README.md
crates/xenframe/src/: app.bak.rs  app.rs  config.rs  cursor.rs  event.rs  handler.rs  keyboard.rs  lib.rs  mouse.rs  overlay.rs  redraw.rs  text_agent.rs  web.rs  win32_chrome.rs  window.rs  window_controls.rs
crates/xengui/: Cargo.toml  README.md
crates/xengui-icons/: Cargo.toml  README.md
crates/xengui-icons/src/: lib.rs
crates/xengui-lucide/: Cargo.toml  README.md
crates/xengui-lucide/src/: lib.rs
crates/xengui-wgpu/: Cargo.toml  README.md
crates/xengui-wgpu/src/: backend.rs  lib.rs  window_chrome.rs  window_renderer.rs
crates/xengui-wgpu/src/pipelines/: box_shadow_pipeline.rs  image_pipeline.rs  mod.rs  rect_pipeline.rs  text_pipeline.rs  triangle_pipeline.rs  window_mask_pipeline.rs
crates/xengui-wgpu/src/pipelines/shaders/: box_shadow.wgsl  window_mask.wgsl
crates/xengui/src/: app.rs  constants.rs  core.rs  dispatcher.rs  hooks.rs  input.rs  interaction.rs  lib.rs  macros.rs  reconcile.rs  reconciler.rs  redraw.rs  renderer.rs  svg_compat.rs  types.rs  widget.rs  widget_base.rs
crates/xengui/src/animation/: easing.rs  key.rs  manager.rs  mod.rs  style_animator.rs  transition.rs  transition_property.rs
crates/xengui/src/clipboard/: linux.rs  mod.rs  platform.rs  wasm.rs  windows.rs
crates/xengui/src/components/: debug_text.rs  mod.rs  text.rs
crates/xengui/src/context/: mod.rs  render.rs
crates/xengui/src/layout/: constraints.rs  layout_box.rs  layout_context.rs  layout_engine.rs  measure.rs  measure_context.rs  mod.rs  node_context.rs  render_cache.rs  taffy_bridge.rs  widget_id.rs  widget_path.rs
crates/xengui/src/paint/: draw_command.rs  frame_renderer.rs  image_pipeline.rs  mod.rs  paint_context.rs  rect_pipeline.rs  render_backend.rs  text_pipeline.rs  triangle_pipeline.rs
crates/xengui/src/paint/shaders/: image.wgsl  rect.wgsl  triangle.wgsl
crates/xengui/src/style/: background.rs  border.rs  box_shadow.rs  color.rs  colors.rs  cursor.rs  display.rs  edges.rs  flex.rs  grid.rs  length.rs  mod.rs  outline.rs  overflow.rs  position.rs  properties.rs  scrollbar.rs  size.rs  style.rs  style_builder.rs  system_theme.rs  theme.rs
crates/xengui/src/style/typography/: font_style.rs  font_weight.rs  letter_spacing.rs  line_height.rs  mod.rs  text_align.rs  text_decoration.rs
crates/xengui/src/text/: font.rs  font_database.rs  glyph.rs  mod.rs  text_measurer.rs  text_rasterizer.rs
crates/xengui/src/widgets/: button.rs  context_menu.rs  image.rs  label.rs  link.rs  mod.rs  svg.rs  text.rs  textbox.rs  view.rs
examples/animation-example/: Cargo.toml  index.html
examples/animation-example/src/: main.rs
examples/basic_app/: Cargo.toml  index.html  run.bat
examples/basic_app/src/: main.rs
examples/playground/: Cargo.toml
examples/playground/src/: main.rs
examples/scroll-example/: Cargo.toml
examples/scroll-example/src/: main.rs
examples/settings-app/: Cargo.toml  README.md  index.html
examples/settings-app/src/: main.rs
examples/widgets-catalog/: Cargo.toml  README.md
examples/widgets-catalog/src/: main.rs
examples/xengui-demo/: Cargo.toml  README.md  Trunk.toml  index.html  manifest.webmanifest
examples/xengui-demo/assets/: manifest.webmanifest  sw.js
examples/xengui-demo/src/: main.rs
examples/xengui_demo/: Cargo.toml
examples/xengui_demo/src/: main.rs
scripts/: bump_version.py  dir.py  vercel.sh
xengui/: Cargo.toml
xengui/src/: app.rs  core.rs  lib.rs  renderer.rs
xengui/src/components/: debug_text.rs  mod.rs  text.rs
