[workspace]
resolver = "2"
members = ["crates/xencommit", "crates/xengui", "examples/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"
version = "0.1.0"

[profile.release]
opt-level = 3 # Maximum speed and cpu optimization (obfuscates code).
lto = true # Link-Time Optimization: Melts all dependencies and functions in one pot.
codegen-units = 1 # Links code blocks together strictly.
panic = "abort" # Removes error call tree.
strip = true # Scrapes all the function, struct and variable names.

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
xengui = { version = "0.2.1", path = "crates/xengui" }
wgpu = { version = "30.0.0", features = ["webgl"] }
glyphon = "0.12.0"
winit = "0.30.0"
taffy = { version = "0.12.1", features = ["grid"] }
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
smol_str = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
