[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"

[profile.release]
opt-level = 3 # Maximum speed and cpu optimization (obfuscates code).
lto = true # Link-Time Optimization: Melts all dependencies and functions in one pot.
codegen-units = 1 # Links code blocks together strictly.
panic = "abort" # Removes error call tree.
strip = true # Scrapes all the function, struct and variable names.

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1

[workspace.dependencies]
xengui = { version = "0.2.4", path = "crates/xengui" }
xenframe = { version = "0.1.0", path = "crates/xenframe" }
xen-clipboard = { version = "0.1.6", path = "crates/xen-clipboard" }
xen-animation = { version = "0.1.3", path = "crates/xen-animation" }
xengui-lucide = { version = "0.1.0", path = "crates/xengui-lucide" }
xen-svg = { version = "0.1.0", path = "crates/xen-svg" }
lyon = "1.0.19"
wgpu = { version = "30.0.0", features = ["webgl"] }
glyphon = "0.12.0"
winit = "0.30.0"
taffy = { version = "0.12.1", features = ["grid"] }
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
smol_str = "0.3"
log = "0.4"
web-time = "1.1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
] }
env_logger = "0.11.11"
console_log = "1.0.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
