[package]
name = "xengui"
version = "0.1.0"
edition = "2021"
authors = ["randseas <waultbank@gmail.com>"]
description = "wgpu based, modern and high-performance GUI library."
license = "GPLv3"
repository = "https://github.com/randseas/xengui"
readme = "README.md"
keywords = ["gui", "wgpu", "winit", "graphics"]
categories = ["gui"]

[dependencies]
wgpu = "28.0.0"
wgpu_glyph = "0.28.0"
winit = "0.30.0" 
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
smol_str = "0.3"