[package]
name = "xen-animation"
version = "0.1.4"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]

description = "a high-performance animation library in rust"
license = "Apache-2.0"

repository = "https://github.com/randseas/xengui/tree/main/crates/xen-animation"
readme = "README.md"

keywords = ["animation", "transition", "easing", "interpolation", "gui"]
categories = ["gui", "graphics", "game-development"]
