[package]
name = "xen-clipboard"
version = "0.1.1"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]
description = "cross-platform clipboard library in rust"
license = "Apache-2.0"
repository = "https://github.com/randseas/xen-clipboard"
readme = "README.md"
keywords = ["clipboard", "wayland", "x11", "windows", "cross-platform"]
categories = ["gui", "os"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }