[package]
name = "xen-router"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]
description = "a lightweight client-side router for xengui, with browser URL sync on web"
license = "Apache-2.0"
repository = "https://github.com/randseas/xengui/tree/main/crates/xen-router"

[dependencies]
xengui = { workspace = true }
smol_str = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "History",
    "Location",
    "Event",
] }
wasm-bindgen = { workspace = true }
