[package]
name = "xen-svg"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]
description = "a minimal svg parser and tessellator in rust"
license = "Apache-2.0"
repository = "https://github.com/randseas/xengui"
readme = "README.md"
keywords = ["svg", "vector", "icons", "parser"]
categories = ["graphics", "rendering"]

[dependencies]
