[package]
name = "xenframe"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]
description = "platform runtime (windowing, event loop, IME, clipboard) for xengui"
license = "Apache-2.0"
repository = "https://github.com/randseas/xengui/tree/main/crates/xenframe"
readme = "README.md"

[dependencies]
xengui = { workspace = true }
xengui-wgpu = { workspace = true }
xen-clipboard = { workspace = true }
xen-animation = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
web-time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "Navigator",
    "KeyboardEvent",
    "Event",
    "InputEvent",
    "FocusOptions",
    "MediaQueryList",
    "MediaQueryListEvent",
    "VisualViewport",
] }
console_error_panic_hook = "0.1"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_log = { workspace = true }
