[package]
name = "xengui-icons"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]
description = "xengui icons library"
license = "Apache-2.0"
repository = "https://github.com/randseas/xengui"
readme = "../../README.md"
keywords = ["gui", "icons", "svg"]
categories = ["gui"]

[dependencies]