[package]
name = "xengui-lucide"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]
description = "xengui lucide integration"
license = "Apache-2.0"
repository = "https://github.com/randseas/xengui"
readme = "../../README.md"
keywords = ["gui", "icons", "svg", "lucide"]
categories = ["gui"]

[dependencies]
xengui = { workspace = true }