[package]
name = "xengui-wgpu"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]
description = "wgpu render backend for xengui"
repository = "https://github.com/randseas/xengui/tree/main/crates/xengui-wgpu"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
xengui = { workspace = true }
wgpu = { workspace = true }
raw-window-handle = { workspace = true }
glyphon = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
web-time = { workspace = true }
smol_str = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
