[package]
name = "xengui"
version = "0.2.1"
edition = "2024"
rust-version = "1.92"
authors = ["randseas <waultbank@gmail.com>"]
description = "xengui: a reactive gui library in rust"
license = "Apache-2.0"
repository = "https://github.com/randseas/xengui"
readme = "../../README.md"
keywords = ["gui", "wgpu", "winit", "graphics"]
categories = ["gui"]

[dependencies]
wgpu = { workspace = true }
glyphon = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
smol_str = { workspace = true }
log = { workspace = true }
taffy = { workspace = true }
image = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
system-fonts = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = { workspace = true }
