[package]
name = "xengui"
version = "0.2.5"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["randseas <waultbank@gmail.com>"]
description = "a retained-mode gui library in rust"
license = "Apache-2.0"
repository = "https://github.com/randseas/xengui"
readme = "../../README.md"
keywords = ["gui", "portable", "graphics"]
categories = ["gui"]

[dependencies]
wgpu = { workspace = true }
glyphon = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
smol_str = { workspace = true }
log = { workspace = true }
web-time = { workspace = true }
taffy = { workspace = true }
image = { workspace = true }
xen-clipboard = { workspace = true }
xen-animation = { workspace = true }
xen-svg = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
system-fonts = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "HtmlCanvasElement",
    "Navigator",
    "KeyboardEvent",
    "Event",
    "MediaQueryList",
    "MediaQueryListEvent",
] }
console_error_panic_hook = "0.1"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
