[package]
name = "settings-app"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
xengui = { workspace = true }
xenframe = { workspace = true }
xen-clipboard = { workspace = true }
xengui-lucide = { workspace = true }
log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { workspace = true }
