[package]
name = "xengui-demo"
version = "0.1.1"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
xengui = { workspace = true }
xenframe = { workspace = true }
xengui-wgpu = { workspace = true }
xen-router = { workspace = true }
xen-clipboard = { workspace = true }
xengui-lucide = { workspace = true }
log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
] }
